# smart-vibration-monitoring-system

./: .gitignore  LICENSE  README.md
docs/: IndustrialPredictiveMaintenanceSystem.md  SystemArchitectureDesign.md
docs/diagrams/: data_flow.drawio  hardfirm.drawio  hardware_architecture.drawio  industrial_predictive_architecture.drawio  software_architecture.drawio  softwarestructure.drawio  sysstemstructure.drawio
edge-ai/: AGENTS.md  CONTEXT.md  README.md  environment.yml  prepare_and_train.py  requirements.txt
edge-ai/data_collection/: __init__.py  config.yaml  http_sync.py  mqtt_subscriber.py  training_data.csv
edge-ai/data_pipeline/: config.yaml  data_cleaner.py  dataset_builder.py  feature_extractor.py
edge-ai/deployment/: config.yaml  onnx_converter.py  tflite_converter.py
edge-ai/deployment/models/: autoencoder_metadata.json
edge-ai/esp32_tiny_vibration_ml/: .gitignore
edge-ai/inference/: config.yaml  inference_engine.py  real_time_processor.py
edge-ai/models/: config.yaml  scaler_params.json  trainer.py
edge-ai/models/ensemble/: model_cascade.py
edge-ai/models/fallback/: rule_engine.py  statistical_detector.py
edge-ai/models/primary/: autoencoder.py  vibration_cnn.py
edge-ai/models/saved_models/: autoencoder_24_norm.json
edge-ai/monitoring/: drift_detector.py
edge-ai/raspberry_pi/: AGENTS.md  config.yaml  deploy.sh  edge_server.py
edge-ai/tests/: test_http_sync.py  test_pipeline.py
edge-ai/utils/: config_loader.py  logger.py  metrics.py  visualization.py
edge-gateway/: CONTEXT.md
edge-gateway/config/: aggregator.yaml  api-server.yaml  audio-monitor.yaml  chrony.conf  devices.yaml  edge-router.yaml  edgevib-buffer.yaml  edgevib-gpio.yaml  edgevib-hwmon.yaml  edgevib-input.yaml  edgevib-video.yaml  iio-vibration.yaml  inference.yaml  llm-analyzer.yaml  model-deploy.yaml  opcua-server.yaml  ota-server.yaml  prometheus.rules.yml  prometheus.yml  rs232-gateway.yaml  vcan-edgevib.yaml  vision-service.yaml
edge-gateway/docker/: docker-compose.yml
edge-gateway/docker/alertmanager/: config.yml
edge-gateway/docker/grafana/: datasources.yml
edge-gateway/docker/timescaledb/: init.sql  views.sql
edge-gateway/drivers/edgevib_buffer/: Makefile  edgevib_buffer.c
edge-gateway/drivers/edgevib_csi/: Makefile  edgevib-csi-ov5640.dts  edgevib_csi_sensor.c
edge-gateway/drivers/edgevib_gpio/: Makefile  edgevib_gpio.c
edge-gateway/drivers/edgevib_hwmon/: Makefile  edgevib_hwmon.c
edge-gateway/drivers/edgevib_input/: Makefile  edgevib_input.c
edge-gateway/drivers/edgevib_video/: Makefile  edgevib_video.c
edge-gateway/drivers/iio_vibration/: Makefile  edgevib_iio.c
edge-gateway/drivers/rtc-edgevib/: Makefile  edgevib_rtc.c  rtc-edgevib.dts
edge-gateway/drivers/vcan_edgevib/: Makefile  vcan_edgevib.c
edge-gateway/scripts/: Dockerfile.alert-webhook  alert-webhook.py  proxy-start.sh  setup-win-ntp.ps1
edge-gateway/services/api-server/: go.mod  go.sum
edge-gateway/services/audio-monitor/: Makefile  requirements.txt
edge-gateway/services/data-aggregator/: Dockerfile  Makefile  go.mod
edge-gateway/services/edge-router/: Dockerfile  Makefile  go.mod
edge-gateway/services/inference-engine/: Dockerfile  requirements.txt
edge-gateway/services/llm-analyzer/: Dockerfile  requirements.txt
edge-gateway/services/model-deploy/: Dockerfile  Makefile  go.mod  go.sum
edge-gateway/services/opcua-server/: Makefile
edge-gateway/services/ota-server/: Dockerfile  Makefile  go.mod
edge-gateway/services/rs232-gateway/: Makefile
edge-gateway/services/vision-service/: Makefile  requirements.txt
edge-gateway/tests/edge-router/: test_e2e.py
edge-gateway/tests/integration/: conftest.py  insert_test_data.sql  requirements-test.txt  test_dashboard_views.py
edge-gateway/tests/model-deploy/: test_end_to_end.py
edge-gateway/tests/ota-server/: requirements-test.txt  test_end_to_end.py
firmware/esp32-gateway/: .gitignore  AGENTS.md  CMakeLists.txt  idf_component.yml  partitions.csv  partitions_models.csv  sdkconfig.defaults  sdkconfig.defaults.models
firmware/esp32-gateway/components/adxl345/: CMakeLists.txt  adxl345.c  adxl345.h  adxl345_reg.h  adxl345_test.c
firmware/esp32-gateway/components/ai_service/: CMakeLists.txt  ai_backend.h  ai_backend_local.cpp  ai_backend_remote.c  ai_service.c  ai_service.h  model_data.h
firmware/esp32-gateway/components/config_manager/: CMakeLists.txt  config_manager.c  config_manager.h  config_manager_test.c
firmware/esp32-gateway/components/mqtt_app/: CMakeLists.txt  mqtt.c  mqtt.h  mqtt_test.c
firmware/esp32-gateway/components/ota_update/: CMakeLists.txt  ota_update.c  ota_update.h  ota_update_test.c
firmware/esp32-gateway/components/protocol/: CMakeLists.txt  protocol.c  protocol.h  protocol_test.c
firmware/esp32-gateway/components/system_monitor/: CMakeLists.txt  system_monitor.c  system_monitor.h  system_monitor_test.c
firmware/esp32-gateway/components/temperature_compensation/: CMakeLists.txt  temperature_compensation.c  temperature_compensation.h  temperature_compensation_test.c
firmware/esp32-gateway/components/time_sync/: CMakeLists.txt  time_sync.c  time_sync.h  time_sync_test.c
firmware/esp32-gateway/main/: CMakeLists.txt  esp32-gateway.c
firmware/stm32_node_nde/: .cproject  .mxproject  .project  AGENTS.md  CLAUDE.md  CONTEXT.md  stm32_node_nde.ioc
firmware/stm32_node_nde/App/: app_main.c  app_main.h  can_send.c  can_send.h  dsp_fft_q15.c  dsp_fft_q15.h  dsp_nde.c  dsp_nde.h  global_error.h
firmware/stm32_node_nde/bsp/: bsp_log.h
firmware/stm32_node_vibration/: .gitignore  AGENTS.md  CONTEXT.md  STM32F407IGTX_FLASH.ld  STM32F407IGTX_RAM.ld  lvgl.h  stm32_node_vibration Debug.launch  stm32_node_vibration.ioc
firmware/stm32_node_vibration/App/: app_main.c  can_nde.c  can_nde.h
tests/: .gitignore
tests/ADXL345_ESP_VALI/: CMakeLists.txt
tests/ESP_STM_VALI/: CMakeLists.txt
tests/STM32_DHT11_VALI/: .gitignore  STM32_DHT11_VALI Debug.launch
tests/STM32_ESP32_Test/: .cproject  .gitignore  .project  STM32_ESP32_Test Debug.launch  STM32_ESP32_Test.ioc
(+392 files in other folders)
